[package]
name = "node-anvil"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
anvil = { path = "./deps/foundry/anvil" }
anvil-core = { path = "./deps/foundry/anvil/core" }
anvil-rpc = { path = "./deps/foundry/anvil/rpc" }
# anvil = { git = "https://github.com/foundry-rs/foundry", rev = "4e11d1f" }
# anvil-core = { git = "https://github.com/foundry-rs/foundry", rev = "4e11d1f" }
# anvil-rpc = { git = "https://github.com/foundry-rs/foundry", rev = "4e11d1f" }
revm = { git = "https://github.com/bluealloy/revm", rev = "7ecc92" }
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.20.1"
once_cell = "1.13.1"
parking_lot = "0.12.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]

[patch.crates-io]
#revm = { path = "../../revm/crates/revm" }
revm = { git = "https://github.com/bluealloy/revm" }
